add support for ServiceOffering